# meson-wxwidgets-cpp

./: .gitignore  README.md  meson.build
include/: main.h  mainWindow.h  meson.build
src/: main.cc  mainWindow.cc  meson.build
src/interface/: meson.build
